# PET_iar

PET-IAR-MOV-M/: README.md  platformio.ini
PET-IAR-MOV-M/lib/INA3221/: ina3221.cpp
PET-IAR-MOV-M/lib/ina3221/: ina3221.cpp  ina3221.h
PET-IAR-MOV-M/lib/roti2c/: roti2c.cpp  roti2c.h
PET-IAR-MOV-M/src/: main.cpp
PET-IAR-MOV-S/: CMakeLists.txt
PET-IAR-MOV-S/app/ADS1115/: CMakeLists.txt
PET-IAR-MOV-S/app/ADS1115/inc/: ADS1115.h  portsRP2040.h
PET-IAR-MOV-S/app/ADS1115/src/: ADS1115.c  portsRP2040.c
PET-IAR-MOV-S/app/encoder_analog/: CMakeLists.txt
PET-IAR-MOV-S/app/encoder_analog/inc/: encoder_analog.h
PET-IAR-MOV-S/app/encoder_analog/src/: encoder_analog.c
PET-IAR-MOV-S/app/i2c_slave/inc/: i2c_slave.h
PET-IAR-MOV-S/app/i2c_slave/src/: i2c_slave.c
PET-IAR-MOV-S/app/limit_switch/inc/: limit_switch.h
PET-IAR-MOV-S/app/limit_switch/src/: limit_switch.c
PET-IAR-MOV-S/app/mode_management/: CMakeLists.txt  mode_management.c  mode_managment.h
PET-IAR-MOV-S/app/mode_management/inc/: mode_management.h
PET-IAR-MOV-S/app/mode_management/src/: mode_management.c
PET-IAR-MOV-S/app/pid_digital/: CMakeLists.txt
PET-IAR-MOV-S/app/pid_digital/inc/: pid_digital.h
PET-IAR-MOV-S/app/pid_digital/src/: pid_digital.c
PET-IAR-MOV-S/app/pwm_control/src/: pwm_control.c
PET-IAR-MOV-S/app/quadrature_encoders/inc/: quadrature_encoders.h
PET-IAR-MOV-S/app/quadrature_encoders/src/: quadrature_encoders.c
PET-IAR-MOV-S/main/: CMakeLists.txt  main.c
PET_gpredict/: gpredict_rot.py  launch_rot.sh
PET_gpredict/pet_rot/: pyvenv.cfg
calibracion/: calibrate_pet.py  coords.py
calibracion/calibrate/: pyvenv.cfg
test/VAL_ADC/: CMakeLists.txt  README.md
test/VAL_ADC/main/: CMakeLists.txt  main.c
test/data_scripts/: .gitignore  ADC_compare_voltage.ipynb  ADC_test_Results.ipynb  ADC_test_Resultsv3.ipynb  Compare_ADC.ipynb  adquire_serial.py  data.txt  pruebas_martin.ipynb
test/data_scripts/read_serial/: pyvenv.cfg
